--- a/src/app/modules/customer/submit-documents/submit-documents.component.html
+++ b/src/app/modules/customer/submit-documents/submit-documents.component.html
@@ -10,7 +10,7 @@
     <div class="row">
         <div class="col-lg-3">
             <mat-form-field class="w-full" appearance="outline">
-                <mat-label>Number of Files</mat-label>
+                <mat-label>Number of Files <strong>*</strong></mat-label>
                 <input matInput type="text" appNumberOnly
                        (keyup)="changeNumberOfFiles($event.target.value)"
                        [(ngModel)]="number_of_files"
@@ -19,7 +19,7 @@
         </div>
         <div class="col-lg-3">
             <mat-form-field class="w-full" appearance="outline">
-                <mat-label>Description</mat-label>
+                <mat-label>Description<strong>*</strong></mat-label>
                 <input matInput type="text" (change)="changeTypeData($event.target.value,'description')"
                        [(ngModel)]="general_description"
                        class="mat-input-element"/>
@@ -27,7 +27,7 @@
         </div>
         <div class="col-lg-3">
             <mat-form-field class="w-full" appearance="outline">
-                <mat-label>Reference No.</mat-label>
+                <mat-label>Reference No.<strong>*</strong></mat-label>
                 <input matInput type="text" (change)="changeTypeData($event.target.value,'reference')"
                        [(ngModel)]="reference"
                 >
@@ -35,7 +35,7 @@
         </div>
         <div class="col-lg-3">
             <mat-form-field class="w-full" appearance="outline">
-                <mat-label class="customMatLabel">Select Document Type
+                <mat-label class="customMatLabel">Select Document Type <strong>*</strong>
                 </mat-label>
                 <mat-select (selectionChange)="changeDocumentType($event)">
                     <mat-option *ngFor="let obj of document_types?.LOVs" [value]="obj.Value">
@@ -55,7 +55,7 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <mat-form-field class="w-full" appearance="outline">
-                            <mat-label>Description</mat-label>
+                            <mat-label>Description<strong>*</strong></mat-label>
                             <input matInput type="text"
                                    (change)="changeTypeData($event.target.value,'file_description',i)"
                                    [(ngModel)]="description[i]"/>
@@ -64,14 +64,9 @@
                 </div>
                 <div class="row">
                     <div class="col-lg-6 align-self-center flex">
-<!--                        <div *ngIf="doc_urls[i]" class=" mt-2 mr-4 shadow-sm border"-->
-                        <!--                             style="width: 140px; height: 140px; position: relative;">-->
-                        <!--                            &lt;!&ndash;                    <img class="cursor-pointer" [src]="doc_urls[i]" (click)="previewImg(doc_urls[i])">&ndash;&gt;-->
-                        <!--                        </div>-->
-
-                        <input width="150" style="    align-self: center;" type="file"
+                        <input width="150" style="align-self: center;" type="file"
                                accept="image/png, image/jpg, image/jpeg" appearance="outline"
-                               (change)="onFileChange($event, i)"/>
+                               (change)="onFileChange($event, i)"/><strong>*</strong>
 
                     </div>
                 </div>
