--- a/src/app/modules/land-creation/area-converter/area-converter.component.html
+++ b/src/app/modules/land-creation/area-converter/area-converter.component.html
@@ -1,7 +1,10 @@
 <div class="kt-portlet">
     <div class="kt-portlet__head kt-portlet__head__custom" id="list-header">
-        <div class="kt-portlet__head-label">
-            <h3 class="heading">Area Convertor</h3>
+        <div class="kt-portlet__head-label flex">
+            <h3 class="heading w-11/12">Area Convertor</h3>
+
+                <mat-icon class="mr-2 w-1/12 self-center justify-content-end text-red-500 "  [mat-dialog-close]="false" (click)="onCloseClick()" >cancel</mat-icon>
+
         </div>
     </div>
     <!--<kt-customer-list></kt-customer-list>-->
@@ -81,13 +84,7 @@
                     <div class="kt-form__actions kt-form__actions--solid">
                         <div class="row">
                             <div class="col-lg-12 text-right">
-                                <button type="button"
-                                        class="mat-focus-indicator btn bg-red-500 text-white rounded-md mx-2 mat-raised-button mat-button-base mat-danger"
-                                        mat-raised-button cdkFocusInitial
-                                        value="Cancel" [mat-dialog-close]="false" (click)="onCloseClick()">
-                                    <mat-icon class="mr-2">cancel</mat-icon>
-                                    Close
-                                </button>
+
                             </div>
                         </div>
                     </div>
