--- a/src/app/modules/reports/payment-behavior/payment-behavior.component.html
+++ b/src/app/modules/reports/payment-behavior/payment-behavior.component.html
@@ -1,16 +1,15 @@
-<div id="Kt-portlet-margin-top">
-    <div class="kt-portlet">
-        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header"
-             style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
-            <div class="kt-portlet__head-label flex w-full">
-                <h3 class="heading w-11/12">Payment Behavior</h3>
+<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+
+
+    <div class="row pt-3">
+        <div class="col-lg-12 col-sm-12">
+            <div class="heading">Payment Behavior
             </div>
-            <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
-
-
         </div>
     </div>
 
+
+<div id="Kt-portlet-margin-top">
     <form [formGroup]="bufricationForm" class="kt-form kt-form--group-seperator-dashed">
 
         <div class="kt-form">
@@ -94,3 +93,4 @@
 </div>
 
 
+</div>
