--- a/src/app/modules/reports/reschedulement-of-loan/reschedulement-of-loan.component.html
+++ b/src/app/modules/reports/reschedulement-of-loan/reschedulement-of-loan.component.html
@@ -1,13 +1,26 @@
-<div id="Kt-portlet-margin-top">
-    <div class="kt-portlet">
-        <div class="kt-portlet__head kt-portlet__head__custom" id="list-header"
-             style="display: flex;flex-direction: row;justify-content: space-between; margin-bottom: 10px;">
-            <div class="kt-portlet__head-label flex w-full">
-                <h3 class="heading w-11/12">Request For Reschedulement Of Loan Installment Report</h3>
-            </div>
-            <!-- <span (click)="close(0)"><mat-icon>close</mat-icon></span> -->
+<div class=" px-10  sm:absolute sm:inset-0 flex flex-col flex-auto min-w-0 sm:overflow-scroll bg-card dark:bg-transparent">
+
+
+    <div class="row pt-3">
+        <div class="col-lg-9 col-sm-12">
+            <div class="heading">Request For Reschedulement Of Loan Installment Report</div>
+        </div>
+        <div class="col-lg-3 col-sm-12 self-center">
+
+            <p class="text-right">
+                <button class="mt-1  py-2 mat-focus-indicator mat-flat-button mat-button-base mat-primary" type="button"
+                        color="primary"
+                        aria-expanded="false" aria-controls="collapseExample" onclick="toggleCollapse()">
+                    <mat-icon class="mr-2" id='arrow'>keyboard_arrow_down</mat-icon>
+                    Advance Filter
+                </button>
+            </p>
+
         </div>
     </div>
+
+<div id="Kt-portlet-margin-top">
+
     <div class="collapse show" id="collapseExample">
         <div class="card card-body">
             <form [formGroup]="bufricationForm" class="kt-form kt-form--group-seperator-dashed">
@@ -57,3 +70,4 @@
 
 </div>
 
+</div>
