--- a/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-mco/tour-dairy-mco.component.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="col-lg-12 mt-2">
-                <table class="table table-striped">
+                <table class="table ">
                     <thead>
                     <tr class="table-header-background text-center">
                         <th rowspan="2">Date</th>
@@ -363,7 +363,7 @@
     </div>
 
     <div class="col-lg-12 mt-2">
-                <table class="table table-striped">
+                <table class="table ">
                     <thead>
                     <tr class="table-header-background text-center">
                         <th colspan="6">Disbursements</th>
@@ -407,7 +407,7 @@
     </div>
 
     <div class="col-lg-12 mt-2">
-        <table class="table table-striped">
+        <table class="table ">
             <thead>
             <tr class="table-header-background text-center">
                 <th colspan="5">UTILIZATIONS</th>
