--- a/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zc/tour-dairy-zc.component.html
@@ -63,7 +63,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th rowspan="2">Date</th>
@@ -152,7 +152,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th rowspan="3">No. of loan cases in which Recovery Schedule/Revised Recovery Schedules have not
@@ -221,7 +221,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th colspan="6">
@@ -252,7 +252,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th colspan="15">RECOVERY</th>
@@ -314,7 +314,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th colspan="5">
