--- a/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
+++ b/src/app/modules/tour-dairy/tour-dairy-zm/tour-dairy-zm.component.html
@@ -63,7 +63,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th>Date</th>
@@ -145,7 +145,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th rowspan="2">No. of loan cases in which Recovery Schedule/Revised Recovery Schedules have not
@@ -215,7 +215,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th colspan="15">RECOVERY</th>
