--- a/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-bm/tour-diary-bm.component.html
@@ -63,7 +63,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th rowspan="2">Date</th>
@@ -147,7 +147,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th rowspan="2">No. of utilizations checked as per quota</th>
@@ -201,7 +201,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th colspan="6">
@@ -232,7 +232,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th colspan="15">RECOVERY</th>
@@ -294,7 +294,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th colspan="5">
