--- a/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-pc/tour-diary-pc.component.html
@@ -69,7 +69,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th rowspan="3">Date</th>
@@ -156,7 +156,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th colspan="15">RECOVERY</th>
