--- a/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
+++ b/src/app/modules/tour-dairy/tour-diary-ro/tour-diary-ro.component.html
@@ -63,7 +63,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th rowspan="3">Date</th>
@@ -150,7 +150,7 @@
                             </div>
 
                             <div class="col-lg-12 mt-2">
-                                <table class="table table-striped">
+                                <table class="table ">
                                     <thead>
                                     <tr class="table-header-background text-center">
                                         <th colspan="15">RECOVERY</th>
