--- a/src/app/modules/tour-dairy/set-target-tabs/set-target-tabs.component.html
+++ b/src/app/modules/tour-dairy/set-target-tabs/set-target-tabs.component.html
@@ -4,7 +4,9 @@
 
 <div
     class="sm:inset-0 flex flex-col flex-auto min-w-0 overflow-x-hidden overflow-y-auto bg-card dark:bg-transparent">
-    <div [hidden]="isChild" class="heading">Set Target
+    <div *ngIf="isMCO==false" [hidden]="isChild" class="heading">Set Targets
+    </div>
+    <div *ngIf="isMCO" [hidden]="isChild" class="heading">View Targets
     </div>
     <div [hidden]="isChild" class="pt-3" [formGroup]="targetForm">
         <div class="row">
